# fuller

./: Cargo.toml  README.md
bs/src/: file.rs
crates/ecma_lexer/: Cargo.toml
crates/ecma_lexer/src/: main copy 2.rs  main copy.rs  main.rs  matcher copy.rs  matcher.rs
crates/estree/: Cargo.toml
crates/estree-parser/: Cargo.toml
crates/estree-parser/alt_scanners/: scanner_chars.rs
crates/estree-parser/docs/: lexical_declaration.md  statement.md
crates/estree-parser/drafty_crap/: scanner copy.rs  source.rs
crates/estree-parser/premature_dev_crap/: # Program.md  main.unicode.rs
crates/estree-parser/premature_dev_crap_2/: main copy.rs  program.rs  unified_algo copy.rs
crates/estree-parser/premature_dev_crap_3/: source.rs
crates/estree-parser/src/: # Program.md  ast.rs  ecma_charset.rs  lexer.rs  lexical_declaration.rs  location.rs  main copy 2.rs  main copy.rs  main.rs  parser.rs  scanner.rs  scanner_2.rs  scanner_chars.rs  scanner_safe.rs  scanner_str_slice.rs  (+7 more)
crates/lexer/: Cargo.toml
crates/lexer_n/: Cargo.toml
crates/lexer_par/: Cargo.toml
crates/match_keyword/: Cargo.toml
crates/match_keyword_derive/: Cargo.toml
css-ast/: Cargo.toml
css-ast/src/: lib.rs
css_lexer/: Cargo.toml
css_lexer/src/: lib.rs
css_parser/: Cargo.toml
css_parser/src/: lib.rs
estree-parser/src/: ast.rs  main.rs
src/: lib.rs  parser.rs  scanner.rs
typescript-ast/: Cargo.toml
typescript-ast/src/: lib.rs
typescript-llvm-ir/: Cargo.toml
typescript-llvm-ir/src/: lib.rs  tokens.rs
typescript-parser/: Cargo.toml
typescript-parser/src/: lib.rs  main.rs
(+29 files in other folders)
